--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,19 @@ repository: pauliver/imagelearning.community
 remote_theme: pmarsceill/just-the-docs
 
 
+# Aux links for the upper right navigation
+aux_links:
+  "Image Learning":
+    - "//github.com/ImageLearning/ImageLearning.Community/"
+
+# Supports true (default) or false/nil
+heading_anchors: true
+
+
+footer_content: "Copyright &copy; 2019-2020 Paul Oliver. Distributed by an <a href=\"https://github.com/ImageLearning/ImageLearning.Community/blob/master/LICENSE\">MIT license.</a>"
+
+color_scheme: "dark"
+
+# Google Analytics Tracking (optional)
+# e.g, UA-1234567-89
+#ga_tracking: UA-5555555-55
