--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,4 @@ color_scheme: "dark"
 
 # Google Analytics Tracking (optional)
 # e.g, UA-1234567-89
-ga_tracking: UA-159396166-2
+ga_tracking: G-3XQ0H5FKMP
