--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ baseurl: "/" #https://github.com/pmarsceill/just-the-docs/issues/148
 #url: "imagelearning.community"
 repository: pauliver/imagelearning.community
 
+title: Image Learning
+
 # Theme
 # theme: "just-the-docs"
 remote_theme: pmarsceill/just-the-docs
@@ -17,8 +19,16 @@ heading_anchors: true
 
 footer_content: "Copyright &copy; 2019-2020 Paul Oliver. Distributed by an <a href=\"https://github.com/ImageLearning/ImageLearning.Community/blob/master/LICENSE\">MIT license.</a>"
 
-color_scheme: "dark"
+color_scheme: nil
 
 # Google Analytics Tracking (optional)
 # e.g, UA-1234567-89
 ga_tracking: G-3XQ0H5FKMP
+
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  startings: []
+  blanklines: false
+  profile: false
