--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ repository: pauliver/imagelearning.community
 
 title: Image Learning
 
+description: A community for Machine Learning around Image Recognition
+
 permalink: pretty
 
 # Theme
