--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ color_scheme: "nil"
 # Google Analytics Tracking (optional)
 # e.g, UA-1234567-89
 ga_tracking: G-3XQ0H5FKMP
+plugins:
+  - jekyll-seo-tag
+google_analytics: G-3XQ0H5FKMP
 
 compress_html:
   clippings: all
